--- a/StartupCarvaan/app/src/main/res/layout/fragment_practice.xml
+++ b/StartupCarvaan/app/src/main/res/layout/fragment_practice.xml
@@ -6,9 +6,11 @@
     tools:context=".fragments.practice.practice">
 
     <!-- TODO: Update blank fragment layout -->
-    <TextView
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/practicerecyclerview"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="do some practice here" />
+        tools:listitem="@layout/z_single_practice">
+    </androidx.recyclerview.widget.RecyclerView>
 
 </FrameLayout>
