--- a/StartupCarvaan/app/src/main/res/layout/activity_blogging.xml
+++ b/StartupCarvaan/app/src/main/res/layout/activity_blogging.xml
@@ -14,7 +14,7 @@
         app:itemTextColor="#ffffff"
         android:layout_marginBottom="0dp"
         app:itemIconTint="@color/white"
-        android:background="@color/greyish"
+        android:background="@color/yellow"
         app:menu="@menu/buy_sell">
     </com.google.android.material.bottomnavigation.BottomNavigationView>
 
