--- a/StartupCarvaan/app/src/main/res/layout/dailogsell.xml
+++ b/StartupCarvaan/app/src/main/res/layout/dailogsell.xml
@@ -2,7 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="#614A87"
+    android:background="@color/greyish"
     android:orientation="vertical"
 
     >
@@ -55,14 +55,25 @@
         android:background="#000000" />
 
     <TextView
-        android:id="@+id/myholdings"
+        android:id="@+id/totalsharestobuy"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
         android:layout_marginTop="10dp"
         android:layout_marginBottom="10dp"
 
-        android:text="Your Holdings"
+        android:text="Available:1000"
+        android:textColor="#FFFFFF"
+        android:textSize="20sp" />
+    <TextView
+        android:id="@+id/price"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal"
+        android:layout_marginTop="10dp"
+        android:layout_marginBottom="10dp"
+
+        android:text="Price:20"
         android:textColor="#FFFFFF"
         android:textSize="20sp" />
 
@@ -78,13 +89,14 @@
     <!--        android:textSize="20sp" />-->
 
     <EditText
-        android:id="@+id/noofshares"
+        android:id="@+id/shares"
         android:layout_width="160dp"
         android:layout_height="40dp"
         android:layout_gravity="center_horizontal"
         android:layout_marginBottom="20dp"
-android:background="@drawable/sellinput"
+        android:background="@drawable/sellinput"
         android:gravity="center"
+        android:text="20"
         android:inputType="number"
         android:textColor="#ffffff" />
     <Spinner
@@ -93,14 +105,13 @@ android:background="@drawable/sellinput"
         android:layout_height="40dp"
         android:layout_marginLeft="15dp"
         android:layout_gravity="bottom"
-
         android:fontFamily="sans-serif-medium"
         android:spinnerMode="dialog"
         android:textSize="20sp"
         android:background="@drawable/spinnerbord"
         android:splitMotionEvents="true"
 
-        android:textColor="#000000"/>
+        android:textColor="#ffffff"/>
         />
 
     <Button
