--- a/StartupCarvaan/app/src/main/res/layout/z_single_blogfile.xml
+++ b/StartupCarvaan/app/src/main/res/layout/z_single_blogfile.xml
@@ -253,7 +253,7 @@
                 android:layout_marginRight="10dp"
                 android:layout_marginLeft="10dp"
                 android:layout_marginTop="15dp"
-                android:weightSum="7dp"
+                android:weightSum="7"
                 android:gravity="center_vertical"
                 android:orientation="horizontal"
                 android:background="@drawable/commn">
