--- a/StartupCarvaan/app/src/main/res/layout/z_single_practice.xml
+++ b/StartupCarvaan/app/src/main/res/layout/z_single_practice.xml
@@ -13,149 +13,309 @@
 
     app:cardElevation="15dp"
     android:elevation="15dp">
-    <RelativeLayout
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-        <com.pierfrancescosoffritti.androidyoutubeplayer.core.player.views.YouTubePlayerView
-            android:id="@+id/videoplayer"
-            android:layout_width="match_parent"
-            android:layout_height="240dp"
-            app:autoPlay="false"
-
-            app:enableAutomaticInitialization="true"
-            app:showFullScreenButton="true"
-            app:showSeekBar="true"
-            app:showVideoCurrentTime="true"
-            app:showVideoDuration="true"
-            app:showYouTubeButton="false"></com.pierfrancescosoffritti.androidyoutubeplayer.core.player.views.YouTubePlayerView>
-
+        android:layout_height="wrap_content"
+        android:orientation="vertical">
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="180dp"
-            android:background="@drawable/circularbordersolid"
-            android:layout_marginRight="20dp"
-            android:layout_marginLeft="20dp"
-            android:orientation="vertical">
+            android:orientation="vertical"
+            android:background="@color/grey"
+            >
+            <com.pierfrancescosoffritti.androidyoutubeplayer.core.player.views.YouTubePlayerView
+                android:layout_width="match_parent"
+                android:layout_height="180dp"
+                app:autoPlay="false"
+                android:layout_marginRight="30dp"
+                android:layout_marginBottom="20dp"
+                android:layout_marginLeft="30dp"
+                android:layout_marginTop="10dp"
+
+                app:enableAutomaticInitialization="true"
+                app:showFullScreenButton="true"
+                app:showSeekBar="true"
+                app:showVideoCurrentTime="true"
+                app:showVideoDuration="true"
+                app:showYouTubeButton="false"></com.pierfrancescosoffritti.androidyoutubeplayer.core.player.views.YouTubePlayerView>
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
 
-                android:gravity="center"
-               android:layout_marginTop="18dp"
-                android:orientation="horizontal">
-            <de.hdodenhof.circleimageview.CircleImageView
-                android:layout_width="45dp"
-                android:layout_height="45dp"
-                
-                android:layout_marginLeft="25dp"
-                android:src="@drawable/logonew"/>
-                <TextView
+                android:background="@drawable/circularbordersolid"
+                android:layout_marginRight="20dp"
+                android:layout_marginLeft="20dp"
+                android:orientation="vertical">
+
+                <LinearLayout
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_width="wrap_content"
-                    android:layout_marginLeft="15dp"
-                    android:text="The comoany gidge"
-                    android:textSize="18sp"
-                    android:id="@+id/companynamepractice"
-                    android:textStyle="bold"
-                    android:textColor="#293859"
+
+                    android:gravity="center"
+                    android:layout_marginTop="12dp"
+                    android:orientation="horizontal">
+                    <de.hdodenhof.circleimageview.CircleImageView
+                        android:layout_width="45dp"
+                        android:layout_height="45dp"
+
+                        android:layout_marginLeft="25dp"
+                        android:src="@drawable/logonew"/>
+                    <TextView
+                        android:layout_height="wrap_content"
+                        android:layout_width="wrap_content"
+                        android:layout_marginLeft="15dp"
+                        android:text="The comoany gidge"
+                        android:textSize="18sp"
+                        android:id="@+id/companynamepractice2"
+                        android:textStyle="bold"
+                        android:textColor="#293859"
+                        />
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginRight="15dp"
+
+                        android:gravity="right">
+                        <ImageView
+                            android:layout_width="25dp"
+                            android:layout_height="25dp"
+                            android:id="@+id/likeimagepractice"
+
+                            android:src="@drawable/unlike"/>
+
+                    </LinearLayout>
+                </LinearLayout>
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:gravity="center"
+                    android:layout_marginTop="12dp"
+                    android:layout_marginLeft="25dp"
+                    android:layout_marginRight="25dp"
+                    android:text="gduijb ff3eud fduf2uduegdi3ge gfdu3efue3duevudv du3efud"
+                    android:textSize="16sp"
+                    android:textColor="@color/black"
                     />
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginRight="15dp"
+                    android:orientation="horizontal"
+                    android:gravity="center"
+                    android:layout_marginTop="10dp"
+                    android:layout_marginRight="30dp">
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="Buying price :  "
+                        android:textSize="17sp"
+                        android:textColor="@color/greyish"
 
-                    android:gravity="right">
-                    <ImageView
-                        android:layout_width="25dp"
-                        android:layout_height="25dp"
-                        android:id="@+id/likeimagepractice"
+                        android:textStyle="bold"/>
 
-                        android:src="@drawable/unlike"/>
+                    <TextView
+                        android:id="@+id/buyingprice2"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
 
+                        android:text="10"
+                        android:textColor="@color/black"
+
+
+                        android:textSize="17sp"
+                        android:textStyle="bold" />
                 </LinearLayout>
-            </LinearLayout>
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:gravity="center"
-                android:layout_marginTop="12dp"
-                android:layout_marginLeft="25dp"
-                android:layout_marginRight="25dp"
-                android:text="gduijb ff3eud fduf2uduegdi3ge gfdu3efue3duevudv du3efud"
-                android:textSize="16sp"
-                android:textColor="@color/black"
-                />
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal"
-                android:gravity="center"
-                android:layout_marginTop="10dp"
-                android:layout_marginRight="30dp">
-                <TextView
-                    android:layout_width="wrap_content"
+                <LinearLayout
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="Buying price :  "
-                    android:textSize="17sp"
-                    android:textColor="@color/greyish"
+                    android:orientation="horizontal"
+                    android:gravity="center"
+                    android:layout_marginTop="8dp"
+                    android:layout_marginRight="30dp">
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="Selling price :  "
+                        android:textSize="17sp"
+                        android:textColor="@color/greyish"
 
-                    android:textStyle="bold"/>
+                        android:textStyle="bold"/>
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="10"
+                        android:id="@+id/sellingprice2"
+                        android:textSize="17sp"
+                        android:textColor="@color/black"
 
-                <TextView
-                    android:id="@+id/buyingprice"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
+                        android:textStyle="bold"/>
+                </LinearLayout>
+                <Button
+                    android:layout_width="match_parent"
+                    android:layout_height="45dp"
+                    android:layout_marginTop="12dp"
+                    android:backgroundTint="#FF59B563"
 
-                    android:text="10"
-                    android:textColor="@color/black"
-
-
-                    android:textSize="17sp"
+                    android:text="Interested"
+                    android:textColor="@color/white"
+                    android:textSize="16sp"
+                    android:layout_marginRight="25dp"
+                    android:layout_marginLeft="25dp"
+                    android:textAllCaps="false"
+                    android:layout_marginBottom="12dp"
                     android:textStyle="bold" />
+
             </LinearLayout>
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal"
-                android:gravity="center"
-                android:layout_marginTop="8dp"
-                android:layout_marginRight="30dp">
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="Selling price :  "
-                    android:textSize="17sp"
-                    android:textColor="@color/greyish"
 
-                    android:textStyle="bold"/>
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="10"
-                    android:id="@+id/sellingprice"
-                    android:textSize="17sp"
-                    android:textColor="@color/black"
-
-                    android:textStyle="bold"/>
-            </LinearLayout>
-            <Button
-                android:layout_width="match_parent"
-                android:layout_height="45dp"
-                android:layout_marginTop="12dp"
-                android:backgroundTint="#FF59B563"
-
-                android:text="Interested"
-                android:textColor="@color/white"
-                android:textSize="16sp"
-                android:layout_marginRight="25dp"
-                android:layout_marginLeft="25dp"
-                android:textAllCaps="false"
-                android:layout_marginBottom="14dp"
-                android:textStyle="bold" />
 
         </LinearLayout>
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:visibility="gone">
+            <com.pierfrancescosoffritti.androidyoutubeplayer.core.player.views.YouTubePlayerView
+                android:id="@+id/videoplayer"
+                android:layout_width="match_parent"
+                android:layout_height="240dp"
+                app:autoPlay="false"
 
-    </RelativeLayout>
+                app:enableAutomaticInitialization="true"
+                app:showFullScreenButton="true"
+                app:showSeekBar="true"
+                app:showVideoCurrentTime="true"
+                app:showVideoDuration="true"
+                app:showYouTubeButton="false"></com.pierfrancescosoffritti.androidyoutubeplayer.core.player.views.YouTubePlayerView>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="180dp"
+                android:background="@drawable/circularbordersolid"
+                android:layout_marginRight="20dp"
+                android:layout_marginLeft="20dp"
+                android:orientation="vertical">
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+
+                    android:gravity="center"
+                    android:layout_marginTop="18dp"
+                    android:orientation="horizontal">
+                    <de.hdodenhof.circleimageview.CircleImageView
+                        android:layout_width="45dp"
+                        android:layout_height="45dp"
+
+                        android:layout_marginLeft="25dp"
+                        android:src="@drawable/logonew"/>
+                    <TextView
+                        android:layout_height="wrap_content"
+                        android:layout_width="wrap_content"
+                        android:layout_marginLeft="15dp"
+                        android:text="The comoany gidge"
+                        android:textSize="18sp"
+                        android:id="@+id/companynamepractice"
+                        android:textStyle="bold"
+                        android:textColor="#293859"
+                        />
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginRight="15dp"
+
+                        android:gravity="right">
+                        <ImageView
+                            android:layout_width="25dp"
+                            android:layout_height="25dp"
+                            android:id="@+id/likeimagepractice"
+
+                            android:src="@drawable/unlike"/>
+
+                    </LinearLayout>
+                </LinearLayout>
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:gravity="center"
+                    android:layout_marginTop="12dp"
+                    android:layout_marginLeft="25dp"
+                    android:layout_marginRight="25dp"
+                    android:text="gduijb ff3eud fduf2uduegdi3ge gfdu3efue3duevudv du3efud"
+                    android:textSize="16sp"
+                    android:textColor="@color/black"
+                    />
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal"
+                    android:gravity="center"
+                    android:layout_marginTop="10dp"
+                    android:layout_marginRight="30dp">
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="Buying price :  "
+                        android:textSize="17sp"
+                        android:textColor="@color/greyish"
+
+                        android:textStyle="bold"/>
+
+                    <TextView
+                        android:id="@+id/buyingprice"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+
+                        android:text="10"
+                        android:textColor="@color/black"
+
+
+                        android:textSize="17sp"
+                        android:textStyle="bold" />
+                </LinearLayout>
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal"
+                    android:gravity="center"
+                    android:layout_marginTop="8dp"
+                    android:layout_marginRight="30dp">
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="Selling price :  "
+                        android:textSize="17sp"
+                        android:textColor="@color/greyish"
+
+                        android:textStyle="bold"/>
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="10"
+                        android:id="@+id/sellingprice"
+                        android:textSize="17sp"
+                        android:textColor="@color/black"
+
+                        android:textStyle="bold"/>
+                </LinearLayout>
+                <Button
+                    android:layout_width="match_parent"
+                    android:layout_height="45dp"
+                    android:layout_marginTop="12dp"
+                    android:backgroundTint="#FF59B563"
+
+                    android:text="Interested"
+                    android:textColor="@color/white"
+                    android:textSize="16sp"
+                    android:layout_marginRight="25dp"
+                    android:layout_marginLeft="25dp"
+                    android:textAllCaps="false"
+                    android:layout_marginBottom="14dp"
+                    android:textStyle="bold" />
+
+            </LinearLayout>
+
+        </RelativeLayout>
+
+
+    </LinearLayout>
 </androidx.cardview.widget.CardView>
