--- a/StartupCarvaan/app/src/main/res/layout/activity_card_view.xml
+++ b/StartupCarvaan/app/src/main/res/layout/activity_card_view.xml
@@ -36,73 +36,38 @@
 
             <androidx.cardview.widget.CardView
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_weight="1"
+                android:layout_height="wrap_content"
+
+                android:background="#000"
+                android:padding="16dp"
                 app:cardCornerRadius="50dp"
                 android:layout_marginBottom="16dp"
-                app:cardBackgroundColor="@color/purple_500">
+                app:cardBackgroundColor="@android:color/holo_red_light">
+
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:orientation="horizontal"
                     android:layout_marginHorizontal="16dp"
-                    android:weightSum="3">
-
-                    <LinearLayout
-                        android:layout_width="0dp"
-                        android:layout_weight="1"
-                        android:layout_height="match_parent"
-                        android:orientation="horizontal">
-
-                        <androidx.constraintlayout.widget.ConstraintLayout
-                            android:layout_width="match_parent"
-                            android:layout_height="match_parent">
-
-                        <ProgressBar
-                            android:layout_width="match_parent"
-                            android:layout_height="120dp"
-                            android:id="@+id/progress_bar"
-                            style="?android:progressBarStyleHorizontal"
-                            android:progress="80"
-                            android:layout_gravity="center"
-                            app:layout_constraintBottom_toBottomOf="parent"
-                            app:layout_constraintLeft_toLeftOf="parent"
-                            app:layout_constraintRight_toRightOf="parent"
-                            app:layout_constraintTop_toTopOf="parent"
-                            android:progressDrawable="@drawable/circle">
-                        </ProgressBar>
-
-                        <TextView
-                            android:id="@+id/text_view_progress"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:textColor="@color/white"
-                         android:layout_gravity="center"
-                            android:textAppearance="@style/TextAppearance.AppCompat.Large"
-                            app:layout_constraintBottom_toBottomOf="@+id/progress_bar"
-                            app:layout_constraintEnd_toEndOf="@+id/progress_bar"
-                            app:layout_constraintStart_toStartOf="@+id/progress_bar"
-                            app:layout_constraintTop_toTopOf="@+id/progress_bar"
-                            tools:text="60%" />
+                    android:layout_marginBottom="15dp"
+                    >
 
 
-                        </androidx.constraintlayout.widget.ConstraintLayout>
-
-                    </LinearLayout>
 
                     <LinearLayout
                         android:layout_width="0dp"
                         android:layout_weight="2"
                         android:layout_height="match_parent"
-                        android:weightSum="2"
+
                         android:orientation="vertical"
                         android:layout_marginVertical="16dp" >
 
 
                         <LinearLayout
                             android:layout_width="match_parent"
-                            android:layout_height="0dp"
-                            android:layout_weight="1">
+                            android:layout_height="wrap_content"
+                            android:layout_marginTop="18dp"
+                            >
 
                             <TextView
                                 android:layout_width="match_parent"
@@ -118,8 +83,8 @@
 
                         <LinearLayout
                             android:layout_width="match_parent"
-                            android:layout_height="0dp"
-                            android:layout_weight="1"
+                            android:layout_height="wrap_content"
+
                             android:weightSum="2">
 
                             <LinearLayout
@@ -197,12 +162,14 @@
 
 
                 </LinearLayout>
+
+
             </androidx.cardview.widget.CardView>
 
             <androidx.cardview.widget.CardView
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_weight="1"
+                android:layout_height="wrap_content"
+
                 android:background="#000"
                 android:padding="16dp"
                 app:cardCornerRadius="50dp"
@@ -214,64 +181,25 @@
                     android:layout_height="match_parent"
                     android:orientation="horizontal"
                     android:layout_marginHorizontal="16dp"
-                    android:weightSum="3">
-
-                    <LinearLayout
-                        android:layout_width="0dp"
-                        android:layout_weight="1"
-                        android:layout_height="match_parent">
-
-                        <androidx.constraintlayout.widget.ConstraintLayout
-                            android:layout_width="match_parent"
-                            android:layout_height="match_parent"
-                            >
+                    android:layout_marginBottom="15dp"
+                    >
 
 
-
-                        <ProgressBar
-                            android:layout_width="match_parent"
-                            android:layout_height="120dp"
-                            android:id="@+id/progress_bar1"
-                            style="?android:progressBarStyleHorizontal"
-                            android:progress="80"
-                            android:layout_gravity="center"
-                            app:layout_constraintBottom_toBottomOf="parent"
-                            app:layout_constraintLeft_toLeftOf="parent"
-                            app:layout_constraintRight_toRightOf="parent"
-                            app:layout_constraintTop_toTopOf="parent"
-                            android:progressDrawable="@drawable/circle"/>
-
-
-                            <TextView
-                                android:id="@+id/text_view_progress1"
-                                android:layout_width="wrap_content"
-                                android:layout_height="wrap_content"
-                                android:textColor="@color/white"
-                                android:layout_gravity="center"
-                                android:textAppearance="@style/TextAppearance.AppCompat.Large"
-                                app:layout_constraintBottom_toBottomOf="@+id/progress_bar1"
-                                app:layout_constraintEnd_toEndOf="@+id/progress_bar1"
-                                app:layout_constraintStart_toStartOf="@+id/progress_bar1"
-                                app:layout_constraintTop_toTopOf="@+id/progress_bar1"
-                                tools:text="60%" />
-
-                        </androidx.constraintlayout.widget.ConstraintLayout>
-
-                    </LinearLayout>
 
                     <LinearLayout
                         android:layout_width="0dp"
                         android:layout_weight="2"
                         android:layout_height="match_parent"
-                        android:weightSum="2"
+
                         android:orientation="vertical"
                         android:layout_marginVertical="16dp" >
 
 
                         <LinearLayout
                             android:layout_width="match_parent"
-                            android:layout_height="0dp"
-                            android:layout_weight="1">
+                            android:layout_height="wrap_content"
+                            android:layout_marginTop="18dp"
+                            >
 
                             <TextView
                                 android:layout_width="match_parent"
@@ -287,8 +215,8 @@
 
                         <LinearLayout
                             android:layout_width="match_parent"
-                            android:layout_height="0dp"
-                            android:layout_weight="1"
+                            android:layout_height="wrap_content"
+
                             android:weightSum="2">
 
                             <LinearLayout
